--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,9 @@
     "class-methods-use-this": 0,
     "no-new": 0,
     "no-plusplus": 0,
-    "no-await-in-loop": 0
+    "no-await-in-loop": 0,
+    "eol-last": 0,
+    "indent": 0
   },
   "plugins": [
     "jasmine",
